--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -51,6 +51,7 @@
   border: 1px solid #475569;
   border-radius: 5px;
   align-self: flex-start;
+  margin-bottom: 20px;
 }
 
 .search-icon-container {
@@ -81,12 +82,14 @@
   height: 40px;
   border: none;
   outline: none;
-  margin-bottom: 20px;
   padding-left: 10px;
   display: block;
 }
 .jobs-display-container {
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .failure-view {
